# akane-lang

./: Cargo.toml  README.md
akanec/: Cargo.toml
akanec/src/: main.rs
akaneclib/: Cargo.toml
akaneclib/src/: codegen.rs  lexer.rs  lib.rs  llvm.rs  parser.rs  prelude.rs  printer.rs  semantizer.rs
akaneclib/src/data/: codegen_context.rs  mod.rs  token.rs
akaneclib/src/data/ast/: ctor.rs  mod.rs
akaneclib/src/data/constructs/: abs.rs  app.rs  arrow.rs  base.rs  cn.rs  expr.rs  macros.rs  mod.rs  qual.rs  scope.rs  tvar.rs  ty.rs  var.rs
akaneclib/src/data/context/: generic_store.rs  id_provider.rs  id_store.rs  mod.rs  qual_stack.rs
akaneclib/src/data/sem_context/: mod.rs
akaneclib/src/data/semantizer_context/: mod.rs  prelude.rs  qual_stack.rs
akaneclib/src/data/store/: generic_store.rs  id_store.rs  matrix.rs  mod.rs  qual_stack.rs
akaneclib/src/data/str_info/: mod.rs
akaneclib/src/data/typing/: mod.rs  ty_env.rs  ty_env_store.rs
akanectest/: build.rs
akanectest/src/tests/: ffi.rs  mod.rs
akanectest/src/tests/akane/: test.akane
